--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -20,7 +20,8 @@ script(type='text/javascript', src='/lib/angular-route/angular-route.js')
 //Angular UI
 script(type='text/javascript', src='/lib/angular-bootstrap/ui-bootstrap.js')
 script(type='text/javascript', src='//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.9.0.js')
-script(type='text/javascript', src='/lib/angular-ui-utils/modules/route/route.js')
+//script(type='text/javascript', src='/lib/angular-ui-utils/modules/route/route.js')
+//script(type='text/javascript', src='/lib/angular-ui-utils/ui-utils-min.js')
 
 //Application Init
 script(type='text/javascript', src='/js/app.js')
