--- a/public/views/settings/branding.html
+++ b/public/views/settings/branding.html
@@ -21,7 +21,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-md-1_5 control-label">Company:</label>  
+                        <label class="col-md-1_5 control-label">Company Name:</label>  
                         <div class="col-md-10">
                             <input class="form-control" type="text" name="companyName" data-ng-model="lead.companyName" placeholder="Company Name"/>
                         </div>
@@ -127,7 +127,7 @@
                     
                     <div class="form-group">
                         <div class="col-md-1_5">
-                            <label class="control-label">Notes:</label>
+                            <label class="control-label">Terms:</label>
                         </div>
                         <div class="col-md-10">
                             <textarea class="form-control" data-ng-model="lead.notes"></textarea>
@@ -135,29 +135,11 @@
                         </div>
                     </div>
                     <div class="col-md-11 field-box actions">
-                        <input type="submit" value="Update Lead" class="btn-glow primary">
+                        <input type="submit" value="Update Company Info" class="btn-glow primary">
                         <span>OR</span>
                         <input type="reset" class="reset" value="Cancel" onclick="window.history.back()">
                     </div>
                 </form>
-            </div>
-            <div class="col-md-3 form-sidebar tag-sidebar">
-                <div class="btn-group toggle-inputs hidden-tablet">
-                    <button class="glow left" data-input="inline">Tags</button>
-                    <button class="glow right active" data-input="normal">More Tags</button>
-                </div>
-                <div class="alert alert-info">
-                    <i class="icon-lightbulb pull-left"></i>
-                    Click above to see difference between inline and normal inputs on a form
-                </div>                        
-                <h6>Sidebar text for instructions</h6>
-                <p>Add multiple users at once</p>
-                <p>Choose one of the following file types:</p>
-                <ul>
-                    <li><a href="#">Upload a vCard file</a></li>
-                    <li><a href="#">Import from a CSV file</a></li>
-                    <li><a href="#">Import from an Excel file</a></li>
-                </ul>
             </div>
         </div>
     </div>
