--- a/public/views/settings/view.html
+++ b/public/views/settings/view.html
@@ -18,7 +18,7 @@
         </ul>
         <div class="tab-content" id="tab-content">
             <div class="tab-pane active" id="tab1" data-ng-include="'views/settings/branding.html'"></div>
-            <div class="tab-pane" id="tab2" data-ng-include="''"></div>
+            <div class="tab-pane" id="tab2" data-ng-include="'views/settings/users.html'"></div>
         </div>
     </div>
 </div
