--- a/public/views/settings/view.html
+++ b/public/views/settings/view.html
@@ -3,7 +3,7 @@
     <div class="row header">
         <div class="col-md-8">
             <!--<img src="img/contact-profile.png" class="avatar img-circle">-->
-            <h1 class="main-title"><i class="icon-book table-icon"></i><span>Company Name</span></h1>
+            <h1 class="main-title"><i class="icon-book table-icon"></i><span>Company Settings</span></h1>
         </div>
         <div data-ng-show="global.user._id == lead.user._id">
             <a class="btn-flat icon pull-right delete-user" data-toggle="tooltip" title="" data-placement="top" data-original-title="Delete Lead" data-ng-click="remove();">
