--- a/public/views/leads/create/general.html
+++ b/public/views/leads/create/general.html
@@ -9,10 +9,10 @@
                           <label>Name:</label>
                         </div>
                         <div class="col-md-5">
-                          <input type="text" data-ng-model="firstName" placeholder="First Name" class="form-control" maxlength="30" required>
+                          <input type="text" data-ng-model="firstName" placeholder="First Name" class="form-control" maxlength="30">
                         </div>
                         <div class="col-md-5">
-                          <input type="text" data-ng-model="lastName" placeholder="Last Name" class="form-control small-inline" maxlength="30" required>
+                          <input type="text" data-ng-model="lastName" placeholder="Last Name" class="form-control small-inline" maxlength="30">
                         </div>
                     </div>
                     <div class="form-group">
