these are broken changes to leads

--- a/public/views/leads/view/view.html
+++ b/public/views/leads/view/view.html
@@ -17,7 +17,7 @@
             <li><a href="#tab2" data-toggle="tab">Site Survey</a></li>
         </ul>
         <div class="tab-content" id="tab-content">
-            <div class="tab-pane active" id="tab1" data-ng-include="'views/settings/branding.html'"></div>
+            <div class="tab-pane active" id="tab1" data-ng-include="'views/leads/view/general.html'"></div>
             <div class="tab-pane" id="tab2" data-ng-include="'views/leads/view/siteSurvey.html'"></div>
         </div>
     </div>
