--- a/public/css/compiled/elements.css
+++ b/public/css/compiled/elements.css
@@ -383,7 +383,7 @@
   margin-left: 0px !important;
   vertical-align: middle;
   min-width: 100px;
-  height: 25px;
+  /*height: 25px;*/
   min-height: 25px !important;
   position: relative;
   overflow: hidden;
@@ -409,7 +409,7 @@
   font-family: "Open Sans", Arial;
   font-size: 12px;
   border: none;
-  padding: 1px 30px 0px 7px;
+  /*padding: 1px 30px 0px 7px;*/
   height: 30px;
   -webkit-appearance: none;
   color: #737f8d;
