--- a/public/views/leads/create/general.html
+++ b/public/views/leads/create/general.html
@@ -59,7 +59,10 @@
                         <div class="col-md-3">
                           <input type="text" placeholder="City" class="form-control" data-ng-model="city">
                         </div>
-                        <div id="state" class="ui-select col-md-4">
+                        <div class="col-md-4">
+                          <input type="text" placeholder="State" class="form-control" data-ng-model="state">
+                        </div>
+                        <!--<div id="state" class="ui-select col-md-4">
                             <select data-ng-model="state">
                                 <option value="">Select State</option>
                                 <option value="AL">Alabama</option> 
@@ -114,23 +117,27 @@
                                 <option value="WI">Wisconsin</option> 
                                 <option value="WY">Wyoming</option>
                             </select>
-                        </div>
+                        </div>-->
                         <div class="col-md-3">
                             <input type="text" data-ng-model="zip" placeholder="Postal Code" class="form-control small-inline">
                         </div>
                     </div>
                     <div class="form-group">
                         <div class="col-md-1_5 control-label">
-                          <label>Lead Status:</label>
+                            <label>Status:</label>
                         </div>
-                        <div id="state" class="ui-select col-md-4">
-                            <select data-ng-model="status">
-                                <option value="">Not Contacted</option>
-                                <option value="Attempted">Attempted</option> 
-                                <option value="Contacted">Contacted</option> 
-                                <option value="New Opportunity">New Opportunity</option> 
-                                <option value="AdditionalContact">Additional Contact</option> 
-                                <option value="Disqualified">Disqualified</option> 
+                        <div class="col-md-8">
+                            <div class="select-style ui-select col-md-5">
+                                <select data-ng-model="status">
+                                    <option value="">Not Contacted</option>
+                                    <option value="Attempted">Attempted</option> 
+                                    <option value="Contacted">Contacted</option> 
+                                    <option value="New Opportunity">New Opportunity</option> 
+                                    <option value="AdditionalContact">Additional Contact</option> 
+                                    <option value="Disqualified">Disqualified</option> 
+                                </select>
+                            </div>
+                        </div>
                     </div>
                     <div class="form-group">
                         <div class="col-md-1_5">
