--- a/public/views/leads/view/general.html
+++ b/public/views/leads/view/general.html
@@ -14,10 +14,10 @@
                           <label>Name:</label>
                         </div>
                         <div class="col-md-5">
-                          <input type="text" data-ng-model="lead.firstName" placeholder="First Name" class="form-control" maxlength="30" required>
+                          <input type="text" data-ng-model="lead.firstName" placeholder="First Name" class="form-control" maxlength="30">
                         </div>
                         <div class="col-md-5">
-                          <input type="text" data-ng-model="lead.lastName" placeholder="Last Name" class="form-control small-inline" maxlength="30" required>
+                          <input type="text" data-ng-model="lead.lastName" placeholder="Last Name" class="form-control small-inline" maxlength="30">
                         </div>
                     </div>
                     <div class="form-group">
@@ -64,7 +64,10 @@
                         <div class="col-md-3">
                           <input type="text" placeholder="City" class="form-control" data-ng-model="lead.city">
                         </div>
-                        <div id="state" class="ui-select col-md-4">
+                        <div class="col-md-4">
+                          <input type="text" placeholder="State" class="form-control" data-ng-model="state">
+                        </div>
+                        <!--<div id="state" class="ui-select col-md-4">
                             <select data-ng-model="lead.state">
                                 <option value="">Select State</option>
                                 <option value="AL">Alabama</option> 
@@ -119,12 +122,28 @@
                                 <option value="WI">Wisconsin</option> 
                                 <option value="WY">Wyoming</option>
                             </select>
-                        </div>
+                        </div>-->
                         <div class="col-md-3">
                             <input type="text" data-ng-model="lead.zip" placeholder="Postal Code" class="form-control small-inline">
                         </div>
                     </div>
-                    
+                    <div class="form-group">
+                        <div class="col-md-1_5 control-label">
+                            <label>Status:</label>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="select-style ui-select col-md-5">
+                                <select data-ng-model="lead.status">
+                                    <option value="">Not Contacted</option>
+                                    <option value="Attempted">Attempted</option> 
+                                    <option value="Contacted">Contacted</option> 
+                                    <option value="New Opportunity">New Opportunity</option> 
+                                    <option value="AdditionalContact">Additional Contact</option> 
+                                    <option value="Disqualified">Disqualified</option> 
+                                </select>
+                            </div>
+                        </div>
+                    </div>
                     <div class="form-group">
                         <div class="col-md-1_5">
                             <label class="control-label">Notes:</label>
