New Lead statuses

--- a/public/views/settings/users.html
+++ b/public/views/settings/users.html
@@ -37,9 +37,11 @@
                         <div id="state" class="ui-select col-md-3">
                             <select data-ng-model="lead.state">
                                 <option value="">Access Level</option>
-                                <option value="Admin">Admin</option> 
-                                <option value="Manager">Manager</option>
-                                <option value="Rep">Representative</option>
+                                <option value="Admin">Administrator</option> 
+                                <option value="Installer">Installer</option>
+                                <option value="SalesRep">Sales Representative</option>
+                                <option value="LeadsAgency">Leads Agency</option>
+                                <option value="SalesAgency">Sales Agency</option>
                             </select>
                         </div> 
                     </div>                   
