--- a/public/views/leads/view/view.html
+++ b/public/views/leads/view/view.html
@@ -3,7 +3,8 @@
     <div class="row header">
         <div class="col-md-8">
             <!--<img src="img/contact-profile.png" class="avatar img-circle">-->
-            <h1 class="main-title"><i class="icon-book table-icon"></i><span>{{lead.firstName}} {{lead.lastName}}</span></h1>
+            <h1 class="main-title"><i class="icon-book table-icon"></i><span></span></h1>
+            <p><small>{{lead}}</small></p>
         </div>
         <div data-ng-show="global.user._id == lead.user._id">
             <a class="btn-flat icon pull-right delete-user" data-toggle="tooltip" title="" data-placement="top" data-original-title="Delete Lead" data-ng-click="remove();">
@@ -11,15 +12,28 @@
             </a>
         </div>
     </div>
-    <div class="tabbable"> <!-- Only required for left/right tabs -->
-        <ul class="nav nav-tabs">
-            <li class="active"><a href="#tab1" data-toggle="tab">General</a></li>
-            <li><a href="#tab2" data-toggle="tab">Site Survey</a></li>
-        </ul>
-        <div class="tab-content" id="tab-content">
-            <div class="tab-pane active" id="tab1" data-ng-include="'views/leads/view/general.html'"></div>
-            <div class="tab-pane" id="tab2" data-ng-include="'views/leads/view/siteSurvey.html'"></div>
+    <form class="form-horizontal" role="form" data-ng-submit="update()">
+        <div class="tabbable"> <!-- Only required for left/right tabs -->
+            <ul class="nav nav-tabs">
+                <li class="active"><a href="#tab1" data-toggle="tab">General</a></li>
+                <li><a href="#tab2" data-toggle="tab">Site Survey</a></li>
+            </ul>
+            <div class="tab-content" id="tab-content">
+                <div class="tab-pane active" id="tab1" data-ng-include="'views/leads/view/general.html'"></div>
+                <div class="tab-pane" id="tab2" data-ng-include="'views/leads/view/siteSurvey.html'"></div>
+            </div>
         </div>
-    </div>
+        <div class="row header leads">
+            <div class="row form-wrapper">
+                <div class="col-md-9">
+                    <div class="col-md-11 field-box actions">
+                        <input type="submit" value="Update Lead" class="btn-glow primary">
+                        <span>OR</span>
+                        <input type="reset" class="reset" value="Cancel" onclick="window.history.back()">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
 </div
 
