--- a/public/views/leads/view/view.html
+++ b/public/views/leads/view/view.html
@@ -3,8 +3,7 @@
     <div class="row header">
         <div class="col-md-8">
             <!--<img src="img/contact-profile.png" class="avatar img-circle">-->
-            <h1 class="main-title"><i class="icon-book table-icon"></i><span></span></h1>
-            <p><small>{{lead}}</small></p>
+            <h1 class="main-title"><i class="icon-book table-icon"></i><span>{{lead.firstName}} {{lead.lastName}}</span></h1>
         </div>
         <div data-ng-show="global.user._id == lead.user._id">
             <a class="btn-flat icon pull-right delete-user" data-toggle="tooltip" title="" data-placement="top" data-original-title="Delete Lead" data-ng-click="remove();">
