--- a/public/css/bootstrap/bootstrap-overrides.css
+++ b/public/css/bootstrap/bootstrap-overrides.css
@@ -405,3 +405,16 @@ label {
     line-height: inherit;
     margin-bottom: 30px;
 }
+
+@media (max-width: 1199px){
+	.navbar-form-responsive{
+		display:none;
+	}
+}
+
+@media (min-width: 1200px){
+	.navbar-form-responsive{
+		display:block;
+	}
+}
+
