--- a/public/css/compiled/leads.css
+++ b/public/css/compiled/leads.css
@@ -5,6 +5,7 @@
 .select-style{
   height: 34px;
   margin-top: -4px;
+  padding-left:0;
 }
 .select-style select{
   padding: 7px 30px 0 7px;
@@ -278,39 +279,5 @@ span.charactersleft {
   #state{
     width: 100%;
     margin-top: 10px;
-  }
-}
-@media only screen and (max-width: 400px),
-(max-device-width: 400px)  {
-
-
-  /* Force table to not be like tables anymore */
-  table, thead, tbody, th, td, tr { 
-    display: block; 
-  }
-  
-  /* Hide table headers (but not display: none;, for accessibility) */
-  thead tr { 
-    position: absolute;
-    top: -9999px;
-    left: -9999px;
-  }
-  
-  td { 
-    /* Behave  like a "row" */
-    border: none;
-    position: relative;
-    padding-left: 50%; 
-  }
-  
-  td:before { 
-    /* Now like a table header */
-    position: absolute;
-    /* Top/left values mimic padding */
-    top: 6px;
-    left: 6px;
-    width: 45%; 
-    padding-right: 10px; 
-    white-space: nowrap;
   }
 }
