--- a/public/views/navigation/navlist.html
+++ b/public/views/navigation/navlist.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">SolarMongo Beta</a>
+            <a class="navbar-brand" href="/">SolarMongo</a>
         </div>
         <div class="navbar-collapse collapse">
             <form action="/users/session" method="post" class="navbar-form navbar-right visible-xs" role="form">
