fixing the updated field

--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -32,6 +32,7 @@ script(type='text/javascript', src='/js/filters.js')
 //Application Services
 script(type='text/javascript', src='/js/services/global.js')
 script(type='text/javascript', src='/js/services/leads.js')
+script(type='text/javascript', src='/js/services/accounts.js')
 script(type='text/javascript', src='/js/services/modal.js')
 
 //Application Controllers
