--- a/app/views/pages/api.jade
+++ b/app/views/pages/api.jade
@@ -38,7 +38,7 @@ block content
 
 			h3 Leads
 			p
-				| You will be using GET, POST, PUT, and DEL for your requests. All requests requires the following: access_token=??????
+				| You will be using GET, POST, PUT, and DEL for your requests. All requests requires the user object described above.
 				ul
 					li
 						| GET LEADS(GET): /api/leads - returns: user (that is logged in), firstName, lastName, .. etc 
