--- a/app/views/includes/foot.jade
+++ b/app/views/includes/foot.jade
@@ -32,12 +32,13 @@ script(type='text/javascript', src='/js/filters.js')
 //Application Services
 script(type='text/javascript', src='/js/services/global.js')
 script(type='text/javascript', src='/js/services/leads.js')
+script(type='text/javascript', src='/js/services/products.js')
 script(type='text/javascript', src='/js/services/accounts.js')
 script(type='text/javascript', src='/js/services/modal.js')
 
 //Application Controllers
 script(type='text/javascript', src='/js/controllers/leads.js')
-script(type='text/javascript', src='/js/controllers/slider.js')
+script(type='text/javascript', src='/js/controllers/products.js')
 
 if (process.env.NODE_ENV == 'development')
     //Livereload script rendered
