--- a/public/views/leads/view/siteSurvey.html
+++ b/public/views/leads/view/siteSurvey.html
@@ -154,7 +154,7 @@
                         <div class="col-md-5">
                             <div class="middle-text">Engineered Truss:</div>
                             <div class="middle slider-frame primary" ng-click="lead.siteSurvey.jobSite.truss = !lead.siteSurvey.jobSite.truss">
-                                <span ng-class="{'on' : lead.siteSurvey.jobSite.truss, '' : !lead.siteSurvey.jobSite.truss}" class="slider-button off">{{siteSurvey.jobSite.truss && 'YES' || 'NO'}}</span>
+                                <span ng-class="{'on' : lead.siteSurvey.jobSite.truss, '' : !lead.siteSurvey.jobSite.truss}" class="slider-button off">{{lead.siteSurvey.jobSite.truss && 'YES' || 'NO'}}</span>
                             </div>
                         </div>
                         <div class="col-md-5">
