--- a/public/views/products/list.html
+++ b/public/views/products/list.html
@@ -1,8 +1,8 @@
 <div id="pad-wrapper" class="users-list" data-ng-controller="ProductsController" data-ng-init="find()">
     <div class="row header">
-        <h3>Products</h3>
+        <h3>Inventory</h3>
         <div class="col-md-10 col-sm-12 col-xs-12 pull-right">
-            <input class="col-md-4 search" data-ng-model="query" type="text" placeholder="Type a lead's name...">
+            <input class="col-md-4 search" data-ng-model="query" type="text" placeholder="Type a products's name...">
             
             <!-- custom popup filter -->
             <!-- styles are located in css/elements.css -->
